# vector-bass

./: .gitignore  LICENSE.txt  Makefile.am  README.md  autogen.sh  configure.ac
MFFM_VectorBass/: LinkList.H  Location.C  Location.H  Makefile  README  XFigOOutput.C  XFigOOutput.H  XFigParse.H  XFigParseTest.cc  audio2fig.C  curve.H  doubleOctave.autoWav.fig  hello.fig  newhello.fig  technologicalBass.fig  technologicalBass2.fig  technologicalBass3.fig  vectorBass.C  vectorBass.H  vectorBassTest.C  vectorBassTest.cc  vectorSynthTest.cc  waveForm.H
api/: Doxyfile.in  Makefile.am
include/: Test.H  XFigOOutput.H  XFigParse.H  curve.H  vectorSynth.H
mffm-libsndfilew-1.2/: Changelog  Makefile  doxygen.cfg  libSndFileWrapper.H  mffm-libsndfilew.1
mffm-libsndfilew-1.2/debian/: changelog  control  copyright  rules
mffm-libsndfilew-1.2/html/: files.html  index.html  libSndFileWrapper_8H-source.html
nodejs/: README.md  VectorSynthTestNode.js  WASMTestNode.js  package.json
src/: Makefile.am  Test.C  vectorSynth.C
test/: Makefile.am  RunTest.C  RunTest.js  XFigParseTest.cc  doubleOctave.fig  doubleOctave.rotate.fig  newhello2.fig  octaves.fig  siren.fig  vectorSynthTest.C  vectorSynthTest.cc
tools/: autotools.sh  autotoolsClean.sh
webApp/: test-element.html
webApp/demo/: libwasm.js  libwasm.wasm
webcomponent/: LibVectorSynth.js  README.md  VectorSynthTestNodeTest2.js  index.html  libWASM.js  package.json
webcomponent/demo/: demo-example.js  index.html
